--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,13 @@ services:
     container_name: simulator
     volumes:
       - .:/go/src/
+    networks:
+      - simulador_default
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+
+
+networks:
+  simulador_default:
+    name: simulador_default
+    external: true
